--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -773,7 +773,7 @@ a {
 .cid-sn1hvEnnDx {
   padding-top: 1rem;
   padding-bottom: 3rem;
-  background: #fafafa;
+  background: #ffffff;
 }
 .cid-sn1hvEnnDx .team-card {
   margin-bottom: 2rem;
@@ -1134,7 +1134,7 @@ a {
   margin: auto;
 }
 .cid-s48OLK6784 .iconfont-wrapper {
-  color: #000000 !important;
+  color: #40b0bf !important;
   font-size: 1.5rem;
   padding-right: .5rem;
 }
