--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -41,11 +41,11 @@ body {
 }
 .display-7 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.5;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -79,9 +79,9 @@ body {
     line-height: calc( 1.4 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
-    font-size: 0.96rem;
-    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.8rem;
+    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -114,7 +114,7 @@ body {
   background-color: #ffe161 !important;
 }
 .bg-danger {
-  background-color: #ff9966 !important;
+  background-color: #ffffff !important;
 }
 .btn-primary,
 .btn-primary:active {
@@ -228,25 +228,25 @@ body {
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #ff9966 !important;
-  border-color: #ff9966 !important;
-  color: #ffffff !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus,
 .btn-danger.active {
-  color: #ffffff !important;
-  background-color: #ff5f0f !important;
-  border-color: #ff5f0f !important;
+  color: #545454 !important;
+  background-color: #d4d4d4 !important;
+  border-color: #d4d4d4 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
-  color: #ffffff !important;
-  background-color: #ff5f0f !important;
-  border-color: #ff5f0f !important;
+  color: #808080 !important;
+  background-color: #d4d4d4 !important;
+  border-color: #d4d4d4 !important;
 }
 .btn-white,
 .btn-white:active {
@@ -401,22 +401,22 @@ body {
 .btn-danger-outline:active {
   background-color: transparent !important;
   border-color: transparent;
-  color: #ff9966;
+  color: #ffffff;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus,
 .btn-danger-outline.active {
-  color: #ff5f0f !important;
+  color: #d4d4d4 !important;
   background-color: transparent!important;
   border-color: transparent!important;
   box-shadow: none!important;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
-  color: #ffffff !important;
-  background-color: #ff9966 !important;
-  border-color: #ff9966 !important;
+  color: #808080 !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-black-outline,
 .btn-black-outline:active {
@@ -476,7 +476,7 @@ body {
   color: #ffe161 !important;
 }
 .text-danger {
-  color: #ff9966 !important;
+  color: #ffffff !important;
 }
 .text-white {
   color: #fafafa !important;
@@ -512,7 +512,7 @@ a.text-warning.active {
 a.text-danger:hover,
 a.text-danger:focus,
 a.text-danger.active {
-  color: #ff5500 !important;
+  color: #cccccc !important;
 }
 a.text-white:hover,
 a.text-white:focus,
@@ -553,7 +553,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
   background-color: #ffe161;
 }
 .alert-danger {
-  background-color: #ff9966;
+  background-color: #ffffff;
 }
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 100px;
@@ -725,12 +725,12 @@ a {
   width: 100%;
 }
 .cid-sn1sadLL0K {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
 .cid-sn1sadLL0K .content-wrapper {
-  background: #65c6d4;
+  background: #ffffff;
 }
 @media (max-width: 991px) {
   .cid-sn1sadLL0K .content-wrapper .row {
@@ -765,14 +765,15 @@ a {
 .cid-sn1sadLL0K .mbr-text,
 .cid-sn1sadLL0K .mbr-section-btn {
   text-align: left;
-  color: #ffffff;
-}
-.cid-sn1sadLL0K .card-title {
   color: #000000;
 }
+.cid-sn1sadLL0K .card-title {
+  color: #40b0bf;
+  text-align: center;
+}
 .cid-sn1hvEnnDx {
-  padding-top: 1rem;
-  padding-bottom: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background: #ffffff;
 }
 .cid-sn1hvEnnDx .team-card {
@@ -783,7 +784,7 @@ a {
   transform: translateY(-10px);
 }
 .cid-sn1hvEnnDx .card-wrap {
-  background: #ffffff;
+  background: #fafafa;
   border-radius: 4px;
 }
 @media (max-width: 991px) {
@@ -831,9 +832,22 @@ a {
 .cid-sn1hvEnnDx .social-row .soc-item:hover .mbr-iconfont {
   color: #ffffff;
 }
+.cid-sn1hvEnnDx .card-text,
+.cid-sn1hvEnnDx .mbr-section-btn,
+.cid-sn1hvEnnDx .social-row {
+  text-align: center;
+  color: #000000;
+}
+.cid-sn1hvEnnDx .card-title,
+.cid-sn1hvEnnDx .social-row {
+  color: #ffffff;
+}
+.cid-sn1hvEnnDx .mbr-section-title {
+  color: #40b0bf;
+}
 .cid-sn1jMz7I0c {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
 .cid-sn1jMz7I0c .item {
@@ -1087,8 +1101,15 @@ a {
 .cid-sn1jMz7I0c H6 {
   text-align: center;
 }
-.cid-s48OLK6784 .navbar-dropdown {
-  position: relative !important;
+.cid-sn1jMz7I0c H3 {
+  color: #40b0bf;
+}
+.cid-s48OLK6784 {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-s48OLK6784 nav.navbar {
+  position: fixed;
 }
 .cid-s48OLK6784 .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -1389,6 +1410,7 @@ a {
 }
 .cid-s48OLK6784 .navbar-dropdown {
   padding: .5rem 1rem;
+  position: fixed;
 }
 .cid-s48OLK6784 a.nav-link {
   display: flex;
@@ -1484,4 +1506,75 @@ a {
 }
 .cid-sn1ho4c6aX P {
   color: #40b0bf;
+}
+.cid-sn1ho4c6aX .mbr-section-title {
+  color: #40b0bf;
+}
+.cid-sn4N41GVrK {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #40b0bf;
+}
+.cid-sn4N41GVrK .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sn4N41GVrK .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sn4N41GVrK .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-sn4N41GVrK .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-sn4N41GVrK .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-sn4N41GVrK .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-sn4N41GVrK .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-sn4N41GVrK .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-sn4N41GVrK .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sn4N41GVrK .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-sn4N41GVrK .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sn4N41GVrK .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sn4N41GVrK .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-sn4N41GVrK .media-container-row .row-copirayt p {
+  width: 100%;
 }
