--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1510,71 +1510,36 @@ a {
 .cid-sn1ho4c6aX .mbr-section-title {
   color: #40b0bf;
 }
-.cid-sn4N41GVrK {
-  padding-top: 1rem;
+.cid-sn7NV0ZaWX {
+  padding-top: 0rem;
   padding-bottom: 0rem;
   background-color: #40b0bf;
 }
-.cid-sn4N41GVrK .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-sn4N41GVrK .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-sn4N41GVrK .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-sn4N41GVrK .media-container-row .foot-menu {
+.cid-sn7NV0ZaWX .list {
   list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-sn4N41GVrK .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-sn4N41GVrK .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-sn4N41GVrK .media-container-row .social-list {
   padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
+  color: #bbbbbb;
 }
-.cid-sn4N41GVrK .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-sn4N41GVrK .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-sn4N41GVrK .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  transition: .2s linear;
-}
-.cid-sn4N41GVrK .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-sn4N41GVrK .media-container-row .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
+@media (max-width: 991px) {
+  .cid-sn7NV0ZaWX .list {
+    margin-bottom: 2rem;
   }
 }
-.cid-sn4N41GVrK .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
+@media (min-width: 992px) {
+  .cid-sn7NV0ZaWX .list {
+    margin-bottom: 0rem;
+  }
 }
-.cid-sn4N41GVrK .media-container-row .row-copirayt p {
-  width: 100%;
+@media (max-width: 767px) {
+  .cid-sn7NV0ZaWX .row {
+    text-align: center;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sn7NV0ZaWX div > *:last-child {
+    margin-top: 0 !important;
+  }
+}
+.cid-sn7NV0ZaWX .copyright {
+  color: #bbbbbb;
 }
