reduced size of about us

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -769,7 +769,7 @@ a {
 }
 .cid-sn1sadLL0K .card-title {
   color: #40b0bf;
-  text-align: center;
+  text-align: left;
 }
 .cid-sn1hvEnnDx {
   padding-top: 2rem;
