--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -41,11 +41,11 @@ body {
 }
 .display-7 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.25rem;
+  font-size: 1.375rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -79,9 +79,9 @@ body {
     line-height: calc( 1.4 * (1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.88rem;
+    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -710,23 +710,134 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-sn1ng6Gvym {
-  background-color: #ffffff;
+.cid-snGJHAdSX3 {
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #fafafa;
 }
-@media (max-width: 991px) {
-  .cid-sn1ng6Gvym .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-sn1ng6Gvym .row {
-  flex-direction: row-reverse;
-}
-.cid-sn1ng6Gvym img {
+.cid-snGJHAdSX3 .carousel {
   width: 100%;
 }
-.cid-sn1sadLL0K {
-  padding-top: 0rem;
+.cid-snGJHAdSX3 .carousel-inner {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.cid-snGJHAdSX3 .carousel-item img {
+  height: 100vh;
+  object-fit: cover;
+}
+.cid-snGJHAdSX3 .mbr-overlay {
+  z-index: 1;
+}
+.cid-snGJHAdSX3 .carousel-caption {
+  bottom: 40px;
+}
+.cid-snGJHAdSX3 .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-snGJHAdSX3 .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-snGJHAdSX3 .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-snGJHAdSX3 .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-snGJHAdSX3 .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-snGJHAdSX3 .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-snGJHAdSX3 .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-snGJHAdSX3 .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-snGJHAdSX3 .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-snGJHAdSX3 .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-snGJHAdSX3 .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-snGJHAdSX3 .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-snGJHAdSX3 .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-snGJHAdSX3 .carousel-indicators li.active,
+.cid-snGJHAdSX3 .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-snGJHAdSX3 .carousel-indicators li::after,
+.cid-snGJHAdSX3 .carousel-indicators li::before {
+  content: none;
+}
+.cid-snGJHAdSX3 .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-snGJHAdSX3 .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-snGJHAdSX3 P {
+  color: #ffffff;
+}
+.cid-snGXkHlgZa {
+  padding-top: 2rem;
   padding-bottom: 0rem;
+  background-color: #40b0bf;
+}
+.cid-snGXkHlgZa .mbr-section-title {
+  color: #65c6d4;
+  text-align: center;
+}
+.cid-snGXkHlgZa .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sn1sadLL0K {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
 .cid-sn1sadLL0K .content-wrapper {
@@ -765,16 +876,16 @@ a {
 .cid-sn1sadLL0K .mbr-text,
 .cid-sn1sadLL0K .mbr-section-btn {
   text-align: left;
-  color: #000000;
+  color: #232323;
 }
 .cid-sn1sadLL0K .card-title {
   color: #40b0bf;
-  text-align: left;
+  text-align: center;
 }
 .cid-sn1hvEnnDx {
-  padding-top: 4rem;
-  padding-bottom: 3rem;
-  background: #ffffff;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+  background: #40b0bf;
 }
 .cid-sn1hvEnnDx .team-card {
   margin-bottom: 2rem;
@@ -784,7 +895,7 @@ a {
   transform: translateY(-10px);
 }
 .cid-sn1hvEnnDx .card-wrap {
-  background: #fafafa;
+  background: #000000;
   border-radius: 4px;
 }
 @media (max-width: 991px) {
@@ -840,272 +951,13 @@ a {
 }
 .cid-sn1hvEnnDx .card-title,
 .cid-sn1hvEnnDx .social-row {
-  color: #ffffff;
+  color: #2299aa;
 }
 .cid-sn1hvEnnDx .mbr-section-title {
-  color: #40b0bf;
+  color: #ffffff;
 }
 .cid-sn1hvEnnDx .mbr-section-subtitle {
   text-align: center;
-}
-.cid-sn1jMz7I0c {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-color: #ffffff;
-}
-.cid-sn1jMz7I0c .item {
-  padding-bottom: 2rem;
-}
-.cid-sn1jMz7I0c .item-wrapper {
-  height: 300px;
-  position: relative;
-}
-.cid-sn1jMz7I0c .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-sn1jMz7I0c .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-sn1jMz7I0c .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-sn1jMz7I0c .carousel-control,
-.cid-sn1jMz7I0c .close {
-  background: #1b1b1b;
-}
-.cid-sn1jMz7I0c .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-sn1jMz7I0c .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-sn1jMz7I0c .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-sn1jMz7I0c .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-sn1jMz7I0c .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-sn1jMz7I0c .close::before {
-  content: '\e91a';
-}
-.cid-sn1jMz7I0c .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-sn1jMz7I0c .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-sn1jMz7I0c .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sn1jMz7I0c .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sn1jMz7I0c .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-sn1jMz7I0c .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-sn1jMz7I0c .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-sn1jMz7I0c .carousel-indicators li.active,
-.cid-sn1jMz7I0c .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-sn1jMz7I0c .carousel-indicators li::after,
-.cid-sn1jMz7I0c .carousel-indicators li::before {
-  content: none;
-}
-.cid-sn1jMz7I0c .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-sn1jMz7I0c .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sn1jMz7I0c .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sn1jMz7I0c .carousel-indicators {
-    display: none;
-  }
-}
-.cid-sn1jMz7I0c .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-sn1jMz7I0c .carousel-inner > .active {
-  display: block;
-}
-.cid-sn1jMz7I0c .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sn1jMz7I0c .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-sn1jMz7I0c .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-sn1jMz7I0c .carousel-control,
-  .cid-sn1jMz7I0c .carousel-indicators,
-  .cid-sn1jMz7I0c .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sn1jMz7I0c .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-sn1jMz7I0c .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-sn1jMz7I0c .carousel-indicators .active,
-.cid-sn1jMz7I0c .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-sn1jMz7I0c .carousel-indicators .active {
-  background: #fff;
-}
-.cid-sn1jMz7I0c .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-sn1jMz7I0c .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-sn1jMz7I0c .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-sn1jMz7I0c .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-sn1jMz7I0c .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-sn1jMz7I0c .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-sn1jMz7I0c .carousel {
-  width: 100%;
-}
-.cid-sn1jMz7I0c .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-sn1jMz7I0c .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-sn1jMz7I0c .modal.fade .modal-dialog,
-.cid-sn1jMz7I0c .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-sn1jMz7I0c .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-sn1jMz7I0c H6 {
-  text-align: center;
-}
-.cid-sn1jMz7I0c H3 {
-  color: #40b0bf;
 }
 .cid-s48OLK6784 {
   z-index: 1000;
@@ -1225,6 +1077,11 @@ a {
 }
 .cid-s48OLK6784 .navbar.collapsed.opened .dropdown-menu {
   top: 0;
+}
+@media (min-width: 992px) {
+  .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5rem);
+  }
 }
 .cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
   left: 0 !important;
@@ -1442,6 +1299,331 @@ a {
     left: -1rem;
   }
 }
+.cid-snGop6KSIR {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: #ffffff;
+}
+.cid-snGop6KSIR .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.cid-snGop6KSIR .item {
+  padding-left: 0;
+  padding-right: 0;
+}
+.cid-snGop6KSIR .item-wrapper {
+  height: 100%;
+  position: relative;
+}
+.cid-snGop6KSIR .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-snGop6KSIR .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0;
+  color: #ffffff;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #1b1b1b;
+  transition: 0.2s;
+}
+.cid-snGop6KSIR .item-wrapper:hover .icon-wrapper {
+  opacity: 0.7;
+}
+.cid-snGop6KSIR .carousel-control,
+.cid-snGop6KSIR .close {
+  background: #1b1b1b;
+}
+.cid-snGop6KSIR .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-snGop6KSIR .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-snGop6KSIR .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-snGop6KSIR .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-snGop6KSIR .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-snGop6KSIR .close::before {
+  content: '\e91a';
+}
+.cid-snGop6KSIR .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-snGop6KSIR .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-snGop6KSIR .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-snGop6KSIR .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-snGop6KSIR .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-snGop6KSIR .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-snGop6KSIR .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-snGop6KSIR .carousel-indicators li.active,
+.cid-snGop6KSIR .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-snGop6KSIR .carousel-indicators li::after,
+.cid-snGop6KSIR .carousel-indicators li::before {
+  content: none;
+}
+.cid-snGop6KSIR .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-snGop6KSIR .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-snGop6KSIR .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-snGop6KSIR .carousel-indicators {
+    display: none;
+  }
+}
+.cid-snGop6KSIR .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-snGop6KSIR .carousel-inner > .active {
+  display: block;
+}
+.cid-snGop6KSIR .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-snGop6KSIR .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-snGop6KSIR .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-snGop6KSIR .carousel-control,
+  .cid-snGop6KSIR .carousel-indicators,
+  .cid-snGop6KSIR .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-snGop6KSIR .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-snGop6KSIR .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-snGop6KSIR .carousel-indicators .active,
+.cid-snGop6KSIR .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-snGop6KSIR .carousel-indicators .active {
+  background: #fff;
+}
+.cid-snGop6KSIR .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-snGop6KSIR .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-snGop6KSIR .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-snGop6KSIR .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-snGop6KSIR .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-snGop6KSIR .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-snGop6KSIR .carousel {
+  width: 100%;
+}
+.cid-snGop6KSIR .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-snGop6KSIR .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-snGop6KSIR .modal.fade .modal-dialog,
+.cid-snGop6KSIR .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-snGop6KSIR .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-snGop6KSIR H6 {
+  text-align: center;
+}
+.cid-snGop6KSIR H3 {
+  color: #40b0bf;
+}
+.cid-snGgX363EB {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #40b0bf;
+}
+.cid-snGgX363EB .carousel-item {
+  justify-content: center;
+}
+.cid-snGgX363EB .carousel-item.active,
+.cid-snGgX363EB .carousel-item-next,
+.cid-snGgX363EB .carousel-item-prev {
+  display: flex;
+}
+.cid-snGgX363EB .carousel-controls a {
+  transition: opacity .5s;
+  font-size: 30px;
+  position: absolute;
+  top: 180px;
+  bottom: auto;
+  height: 60px;
+  width: 60px;
+  padding: 10px;
+  color: #155ce0;
+}
+.cid-snGgX363EB .carousel-controls a .mbr-iconfont {
+  font-weight: 800;
+}
+.cid-snGgX363EB .carousel-control-next span {
+  padding-left: 5px;
+}
+.cid-snGgX363EB .carousel-control-prev span {
+  padding-right: 5px;
+}
+.cid-snGgX363EB .user_image {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto 2rem auto;
+}
+.cid-snGgX363EB .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+@media (max-width: 230px) {
+  .cid-snGgX363EB .user_image {
+    width: 100%;
+    height: auto;
+  }
+}
+.cid-snGgX363EB H3 {
+  color: #ffffff;
+}
+.cid-snGgX363EB .user_text {
+  text-align: center;
+}
+.cid-snGgX363EB .user_name {
+  color: #ffffff;
+}
 .cid-sncYovwdKL {
   padding-top: 2rem;
   padding-bottom: 1rem;
@@ -1450,4 +1632,37 @@ a {
 .cid-sncYovwdKL .mbr-section-title {
   color: #65c6d4;
   text-align: center;
+}
+.cid-snGNT99Nel {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #40b0bf;
+}
+.cid-snGNT99Nel [class^="socicon-"]:before,
+.cid-snGNT99Nel [class*=" socicon-"]:before {
+  line-height: 55px;
+}
+.cid-snGNT99Nel .btn-social {
+  font-size: 32px;
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  padding: 0;
+  position: relative;
+  cursor: pointer;
+  color: #ffffff;
+  border-width: 2px;
+  transition: all .3s;
+  border-color: #ffffff;
+}
+.cid-snGNT99Nel .btn-social:hover {
+  background: #ffffff;
+}
+.cid-snGNT99Nel .btn-social:hover i.socicon {
+  color: #000000 !important;
+}
+.cid-snGNT99Nel .mbr-section-title,
+.cid-snGNT99Nel .mbr-social-likes {
+  color: #ffffff;
 }
