--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -87,19 +87,19 @@ body {
 /* Buttons */
 .btn {
   padding: 0.6rem 1.2rem;
-  border-radius: 150px;
+  border-radius: 50px;
 }
 .btn-sm {
   padding: 0.6rem 1.2rem;
-  border-radius: 150px;
+  border-radius: 50px;
 }
 .btn-md {
   padding: 0.6rem 1.2rem;
-  border-radius: 150px;
+  border-radius: 50px;
 }
 .btn-lg {
   padding: 1rem 2.6rem;
-  border-radius: 150px;
+  border-radius: 50px;
 }
 .bg-primary {
   background-color: #40b0bf !important;
@@ -710,55 +710,73 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-snGJHAdSX3 {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #fafafa;
+.cid-snNiolOHQt {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
 }
-.cid-snGJHAdSX3 .carousel {
-  height: 800px;
-}
-.cid-snGJHAdSX3 .carousel img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.cid-snGJHAdSX3 .carousel-item,
-.cid-snGJHAdSX3 .carousel-inner {
-  height: 100%;
-}
-.cid-snGJHAdSX3 .mbr-overlay {
+.cid-snNiolOHQt .mbr-overlay {
   z-index: 1;
 }
-.cid-snGJHAdSX3 .carousel-caption {
+@media (min-width: 992px) {
+  .cid-snNiolOHQt .carousel {
+    min-height: 700px;
+  }
+  .cid-snNiolOHQt .carousel img {
+    max-height: 700px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-snNiolOHQt .carousel {
+    min-height: 455px;
+  }
+  .cid-snNiolOHQt .carousel img {
+    max-height: 455px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 767px) {
+  .cid-snNiolOHQt .carousel {
+    min-height: 385px;
+  }
+  .cid-snNiolOHQt .carousel img {
+    max-height: 385px;
+    object-fit: contain;
+  }
+  .cid-snNiolOHQt .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-snNiolOHQt .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-snNiolOHQt .carousel,
+.cid-snNiolOHQt .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-snNiolOHQt .item-wrapper {
+  width: 100%;
+}
+.cid-snNiolOHQt .carousel-caption {
   bottom: 40px;
 }
-.cid-snGJHAdSX3 .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-snGJHAdSX3 .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-snGJHAdSX3 .carousel-control:hover {
+.cid-snNiolOHQt .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-snGJHAdSX3 .item-wrapper {
-  width: 100%;
+.cid-snNiolOHQt .mobi-mbri-arrow-next {
+  margin-left: 5px;
 }
-@media (max-width: 767px) {
-  .cid-snGJHAdSX3 .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-snGJHAdSX3 .content-slider-wrap {
-    width: 100% !important;
-  }
+.cid-snNiolOHQt .mobi-mbri-arrow-prev {
+  margin-right: 5px;
 }
-.cid-snGJHAdSX3 .container .carousel-indicators {
+.cid-snNiolOHQt .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-snGJHAdSX3 .carousel-control {
+.cid-snNiolOHQt .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -769,26 +787,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-snGJHAdSX3 .carousel-control.carousel-control-prev {
+.cid-snNiolOHQt .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-snGJHAdSX3 .carousel-control.carousel-control-next {
+.cid-snNiolOHQt .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-snGJHAdSX3 .carousel-control {
+  .cid-snNiolOHQt .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-snGJHAdSX3 .carousel-indicators {
+.cid-snNiolOHQt .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-snGJHAdSX3 .carousel-indicators li {
+.cid-snNiolOHQt .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -800,15 +818,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-snGJHAdSX3 .carousel-indicators li.active,
-.cid-snGJHAdSX3 .carousel-indicators li:hover {
+.cid-snNiolOHQt .carousel-indicators li.active,
+.cid-snNiolOHQt .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-snGJHAdSX3 .carousel-indicators li::after,
-.cid-snGJHAdSX3 .carousel-indicators li::before {
+.cid-snNiolOHQt .carousel-indicators li::after,
+.cid-snNiolOHQt .carousel-indicators li::before {
   content: none;
 }
-.cid-snGJHAdSX3 .carousel-indicators.ie-fix {
+.cid-snNiolOHQt .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -816,26 +834,20 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-snGJHAdSX3 .carousel-indicators {
+  .cid-snNiolOHQt .carousel-indicators {
     display: none !important;
   }
 }
-.cid-snGJHAdSX3 P {
-  color: #ffffff;
-}
-.cid-snGJHAdSX3 H5 {
-  color: #ffffff;
-}
-.cid-snGXkHlgZa {
+.cid-snRN3LC6ci {
   padding-top: 2rem;
   padding-bottom: 0rem;
   background-color: #2299aa;
 }
-.cid-snGXkHlgZa .mbr-section-title {
+.cid-snRN3LC6ci .mbr-section-title {
   color: #65c6d4;
   text-align: center;
 }
-.cid-snGXkHlgZa .mbr-section-subtitle {
+.cid-snRN3LC6ci .mbr-section-subtitle {
   color: #ffffff;
 }
 .cid-sn1sadLL0K {
