--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -87,15 +87,15 @@ body {
 /* Buttons */
 .btn {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 4px;
 }
 .btn-sm {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 4px;
 }
 .btn-md {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 4px;
 }
 .btn-lg {
   padding: 1rem 2.6rem;
@@ -710,73 +710,73 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-snNiolOHQt {
+.cid-soxkCDYT6I {
   padding-top: 6rem;
-  padding-bottom: 0rem;
+  padding-bottom: 4rem;
   background-color: #ffffff;
 }
-.cid-snNiolOHQt .mbr-overlay {
+.cid-soxkCDYT6I .mbr-overlay {
   z-index: 1;
 }
 @media (min-width: 992px) {
-  .cid-snNiolOHQt .carousel {
+  .cid-soxkCDYT6I .carousel {
     min-height: 800px;
   }
-  .cid-snNiolOHQt .carousel img {
+  .cid-soxkCDYT6I .carousel img {
     max-height: 800px;
     object-fit: contain;
   }
 }
 @media (max-width: 991px) and (min-width: 768px) {
-  .cid-snNiolOHQt .carousel {
+  .cid-soxkCDYT6I .carousel {
     min-height: 520px;
   }
-  .cid-snNiolOHQt .carousel img {
+  .cid-soxkCDYT6I .carousel img {
     max-height: 520px;
     object-fit: contain;
   }
 }
 @media (max-width: 767px) {
-  .cid-snNiolOHQt .carousel {
+  .cid-soxkCDYT6I .carousel {
     min-height: 440px;
   }
-  .cid-snNiolOHQt .carousel img {
+  .cid-soxkCDYT6I .carousel img {
     max-height: 440px;
     object-fit: contain;
   }
-  .cid-snNiolOHQt .container .carousel-control {
+  .cid-soxkCDYT6I .container .carousel-control {
     margin-bottom: 0;
   }
-  .cid-snNiolOHQt .content-slider-wrap {
+  .cid-soxkCDYT6I .content-slider-wrap {
     width: 100% !important;
   }
 }
-.cid-snNiolOHQt .carousel,
-.cid-snNiolOHQt .carousel-inner {
+.cid-soxkCDYT6I .carousel,
+.cid-soxkCDYT6I .carousel-inner {
   display: flex;
   align-items: center;
 }
-.cid-snNiolOHQt .item-wrapper {
+.cid-soxkCDYT6I .item-wrapper {
   width: 100%;
 }
-.cid-snNiolOHQt .carousel-caption {
+.cid-soxkCDYT6I .carousel-caption {
   bottom: 40px;
 }
-.cid-snNiolOHQt .carousel-control:hover {
+.cid-soxkCDYT6I .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-snNiolOHQt .mobi-mbri-arrow-next {
+.cid-soxkCDYT6I .mobi-mbri-arrow-next {
   margin-left: 5px;
 }
-.cid-snNiolOHQt .mobi-mbri-arrow-prev {
+.cid-soxkCDYT6I .mobi-mbri-arrow-prev {
   margin-right: 5px;
 }
-.cid-snNiolOHQt .container .carousel-indicators {
+.cid-soxkCDYT6I .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-snNiolOHQt .carousel-control {
+.cid-soxkCDYT6I .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -787,26 +787,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-snNiolOHQt .carousel-control.carousel-control-prev {
+.cid-soxkCDYT6I .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-snNiolOHQt .carousel-control.carousel-control-next {
+.cid-soxkCDYT6I .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-snNiolOHQt .carousel-control {
+  .cid-soxkCDYT6I .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-snNiolOHQt .carousel-indicators {
+.cid-soxkCDYT6I .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-snNiolOHQt .carousel-indicators li {
+.cid-soxkCDYT6I .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -818,15 +818,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-snNiolOHQt .carousel-indicators li.active,
-.cid-snNiolOHQt .carousel-indicators li:hover {
+.cid-soxkCDYT6I .carousel-indicators li.active,
+.cid-soxkCDYT6I .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-snNiolOHQt .carousel-indicators li::after,
-.cid-snNiolOHQt .carousel-indicators li::before {
+.cid-soxkCDYT6I .carousel-indicators li::after,
+.cid-soxkCDYT6I .carousel-indicators li::before {
   content: none;
 }
-.cid-snNiolOHQt .carousel-indicators.ie-fix {
+.cid-soxkCDYT6I .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -834,14 +834,14 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-snNiolOHQt .carousel-indicators {
+  .cid-soxkCDYT6I .carousel-indicators {
     display: none !important;
   }
 }
 .cid-snRN3LC6ci {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #2299aa;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-image: url("../../../assets/images/hero-image-6-1900x1425.jpeg");
 }
 .cid-snRN3LC6ci .mbr-section-title {
   color: #65c6d4;
@@ -849,6 +849,18 @@ a {
 }
 .cid-snRN3LC6ci .mbr-section-subtitle {
   color: #ffffff;
+}
+.cid-soxni0wKi8 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-soxni0wKi8 .mbr-section-title {
+  color: #65c6d4;
+  text-align: center;
+}
+.cid-soxni0wKi8 .mbr-section-subtitle {
+  text-align: justify;
 }
 .cid-sn1sadLL0K {
   padding-top: 0rem;
@@ -1320,16 +1332,11 @@ a {
   padding-bottom: 4rem;
   background-color: #ffffff;
 }
-.cid-snGop6KSIR .row {
-  margin-left: 0;
-  margin-right: 0;
-}
 .cid-snGop6KSIR .item {
-  padding-left: 0;
-  padding-right: 0;
+  padding-bottom: 2rem;
 }
 .cid-snGop6KSIR .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-snGop6KSIR .item-wrapper img {
